tests/fixtures/invalid/pow_set_bool_set.py
# Cannot call pow() with Set[int], Bool, Set[int]
x = pow({1, 2, 3}, True, {1, 2, 3})
